# mcp-data-warehouse-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
deploy/helm/mcp-data-warehouse/: Chart.yaml  values.yaml
deploy/helm/mcp-data-warehouse/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
scripts/: seed.py  smoke_http.py
src/mcp_warehouse/: __init__.py  audit.py  config.py  db.py  server.py  sql_guard.py
tests/: conftest.py  test_http_transport.py  test_mcp_protocol.py  test_security.py  test_seed.py  test_tools.py
