[project]
name = "mcp-data-warehouse-server"
version = "0.2.0"
description = "An MCP server that exposes a synthetic financial data warehouse (DuckDB) for safe, read-only natural-language querying by an LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yahya Shimi" }]
keywords = ["mcp", "model-context-protocol", "duckdb", "anthropic", "fintech", "llm", "rag"]
dependencies = [
    "mcp[cli]>=1.12",
    "duckdb>=1.1",
    "sqlglot>=25.0",
    "anthropic>=0.49",
]

[project.scripts]
mcp-warehouse = "mcp_warehouse.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_warehouse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
